--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,11 +6,12 @@ on:
     - '*'
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      id-token: write
+      attestations: write
     steps:
     - uses: actions/checkout@v4
 
@@ -18,10 +19,15 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22.0'
-
     - name: Build
       run: make all
-      
+
+    - name: Generate attestations for artifacts
+    - uses: actions/attest-build-provenance@v1
+      with:
+        subject-path: 'dist/*'
+    
+    - name: Create release
     - uses: ncipollo/release-action@v1
       with:
         artifacts: "dist/*"
