--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,6 +12,7 @@ jobs:
       contents: write
       id-token: write
       attestations: write
+      
     steps:
     - uses: actions/checkout@v4
 
@@ -19,16 +20,17 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22.0'
+        
     - name: Build
       run: make all
 
     - name: Generate attestations for artifacts
-    - uses: actions/attest-build-provenance@v1
+      uses: actions/attest-build-provenance@v1
       with:
         subject-path: 'dist/*'
     
     - name: Create release
-    - uses: ncipollo/release-action@v1
+      uses: ncipollo/release-action@v1
       with:
         artifacts: "dist/*"
         generateReleaseNotes: true
